bin/xserver/src/snapshots/chaos_xserver__bottom_pane__tests__queued_messages_visible_when_status_hidden_snapshot.snap
---
source: bin/xserver/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Queued follow-up messages                     
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit last queued message              
                                                
› Ask Codex to do anything                      
                                                
  ? for shortcuts            100% context left
