bin/xserver/src/snapshots/chaos_xserver__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: bin/xserver/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interr…
                              
                              
› Ask Codex to do anything    
                              
           100% context left
