bin/xserver/src/snapshots/chaos_xserver__bottom_pane__tests__status_only_snapshot.snap
---
source: bin/xserver/src/bottom_pane.rs
expression: "render_snapshot(&pane, area)"
---
• Working (0s • esc to interrupt)               
                                                
                                                
› Ask Chaos to do anything                      
                                                
  ? for shortcuts            100% context left
